objects/agf__ADM_Product_Tag__c.object
<CustomObject>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RAG_Status_Indicator__c</fullName>
        <formula>IMAGE( 
CASE(RAG_Status__c, 
&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;, 
&quot;Amber&quot;, &quot;/img/samples/light_yellow.gif&quot;, 
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RAG Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAG_Status__c</fullName>
        <label>RAG Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RAG</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Migration_MFA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Migration Major Functional Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Migration_PA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Migration Product Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Team_Tag_Key__c</fullName>
        <description>A compound key consisting of the team ID and tag name used to ensure tag names are unique within a single team</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Team Tag Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Product Tags</relationshipLabel>
        <relationshipName>Product_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Use_for_Automated_Tools__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use for Automated Tools</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Tag</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__Team__c</columns>
        <columns>RAG_Status__c</columns>
        <columns>RAG_Status_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Team_is_Requied</fullName>
        <active>true</active>
        <errorConditionFormula>agf__Team__c == &apos;&apos;</errorConditionFormula>
        <errorMessage>Team is a required a field</errorMessage>
    </validationRules>
</CustomObject>